# sentinel-anomaly-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
.spec/SPEC-001-deteccion-anomalias-telemetria-servidores-06-07-2026/: rules.md  spec.md  tasks.md  work_prepend.md
app/: dashboard.py
data/: sensors.csv
manuals/: cpu-saturada.md  memoria-saturada.md  saturacion-red.md  sobrecalentamiento.md
models/: scaler.joblib  sentinel_model.pt
src/: eda.py  evaluate.py  generate_data.py  model.py  predict.py  rag_advisor.py  train.py  viz_style.py
