[project]
name = "sentinel"
version = "0.1.0"
description = "Detección de anomalías en telemetría de servidores con red neuronal (PyTorch) + RAG"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "joblib>=1.3",
    "streamlit>=1.30",
    "openai>=1.0",
]

[tool.setuptools]
py-modules = []
